# To-Do-Board

./: README.md
.github/workflows/: Build and Release.yml
Backend/: Cargo.toml
Backend/src/: main.rs  process.rs  structures.rs
Frontend/: index.html  script.js  styles.css
Frontend/login/: login.html  login.js
Frontend/manage/: manage.html  manage.js
