[package]
name = "To-Do-Board-Backend"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["cors"] }
